@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-16T16:04:39Z",
-  "count" : 236,
-  "count_minmax" : [ 128, 236 ],
-  "count_decinc" : [ -0, +236 ],
+  "timestamp" : "2022-08-17T00:31:56Z",
+  "count" : 365,
+  "count_minmax" : [ 128, 365 ],
+  "count_decinc" : [ -0, +365 ],
   "uniques" : 5,
   "uniques_minmax" : [ 5, 5 ],
   "uniques_decinc" : [ -0, +5 ]
