@@ -1,15 +1,10 @@
 {
-  "count": 4412,
+  "count": 4502,
   "uniques": 77,
   "clones": [
     {
-      "timestamp": "2022-08-02T00:00:00Z",
-      "count": 32,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-08-03T00:00:00Z",
-      "count": 174,
+      "count": 167,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-08-16T00:00:00Z",
-      "count": 236,
+      "count": 365,
       "uniques": 5
     }
   ]
